fixed buttons overlapping on small screens

--- a/src/DynamicForm.scss
+++ b/src/DynamicForm.scss
@@ -191,13 +191,16 @@ $option-fill-stats: white;
 @media (max-width: 500px){
     .form{
         max-width: 100%;
+        margin: 0px;
     }
     .action-button {
         transform: scale(.7);
     }
-
+    .back-col {
+        margin-left: -30px;
+    }
     .next-col {
-        margin-right: 50px;
+        margin-right: 30px;
     }
     
     .text {
@@ -214,7 +217,7 @@ $option-fill-stats: white;
 
     .nudge-down-l {
         max-width: 100%;
-        margin: 50px auto; 
+        // margin: 50px auto; 
     }
 }
 
